Fixed Social Icon Spacing

--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ nav {
 
 .col2 h1 {
   padding: 100px 0 20px 0;
+  font-size: 1.6rem;
 }
 
 .col2 p {
@@ -96,14 +97,19 @@ nav {
     margin-bottom: 30px;
 }
 
+a{
+  text-decoration: none;
+}
+
 i {
     color: var(--white);
     font-size: 15px;
-    margin-right: 30px;
+    margin: 0 15px 0 15px;
     border-radius: 50px;
     border: #fff solid 2px;
     padding: 15px;
 }
+
 
 i:hover {
     color: var(--Soft-Magenta);
